# GriberProjekt

./: README.md  rasptest.cpp
Desktop/CPP Projekter/GitTogetherTeste/: CoolHelperDoc.txt
Desktop/CPP Projekter/Opgave-Pi-5-1/: CoolHelperDoc.txt  Pi.cpp  Pi.h
Desktop/SemesterProjekt/SemesterProgram/: CMakeLists.txt  main.cpp  robcomm.h  rtde_input_recipe.txt  rtde_output_recipe.txt
GitTest2/Opgave-Pi-5-1/: CMakeLists.txt  Pi.h  main.cpp
Gripper/: Ammeter.cpp  Ammeter.h  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Database.cpp  Database.h  DatabaseGam.cpp  DatabaseGam.h  Encoder  Encoder.cpp  Gripper  MCP3002.h  Makefile  Motor.cpp  Motor.h  Test  cmake_install.cmake  main.cpp
Gripper/.cmake/api/v1/reply/: cache-v2-4a6c4f220482511c807d.json  codemodel-v2-78a622455e173c1cd3db.json  index-2024-04-30T18-34-26-0855.json  target-Gripper-65b417ef582523fa544c.json  target-Gripper_autogen-c5a8b0622060f512296f.json
Gripper/.cmake/api/v1/reply.prev/: cmakeFiles-v1-33919004e2bfbe058c32.json  codemodel-v2-93419724e7aa1aad4d05.json  directory-.-49bd3df24113ed20da10.json  index-2024-04-30T18-32-30-0929.json  target-Gripper-c9f8c255b5c37b81d3c4.json
GripperRobot/: AmMeter.cpp  AmMeter.h  CMakeLists.txt  Encoder.cpp  Encoder.h  database.cpp  database.h  main.cpp  motor.cpp  motor.h  rtde_input_recipe.txt  rtde_output_recipe.txt
MySQLTest/: CMakeCache.txt  CMakeLists.txt  Makefile  MySQLTEST  TestClass.cpp  TestClass.h  TestClass2.cpp  TestClass2.h  cmake_install.cmake  main.cpp
Test/: CMakeLists.txt
projekt/: hund.txt
